yacc/yacc.output
Não terminais inúteis na gramática

    vector


Terminais sem uso na gramática

    KW_NON_SI
    LEX_ERROR


Regras inúteis na gramática

  156 vector: IDENTIFIER type_specifier LANGLE expression RANGLE SEMICOLON
  157       | IDENTIFIER SEMICOLON


Regras inúteis no analisador por causa de conflitos

   77 list_declaration_statement: declaration_statement


Estado 17 conflitos: 1 de deslocamento/redução, 19 de redução/redução
Estado 37 conflitos: 26 de redução/redução
Estado 53 conflitos: 1 de deslocamento/redução, 26 de redução/redução
Estado 57 conflitos: 1 de deslocamento/redução, 52 de redução/redução
Estado 96 conflitos: 2 de deslocamento/redução, 40 de redução/redução
Estado 102 conflitos: 1 de deslocamento/redução
Estado 111 conflitos: 1 de deslocamento/redução, 26 de redução/redução
Estado 116 conflitos: 1 de deslocamento/redução, 22 de redução/redução
Estado 152 conflitos: 1 de deslocamento/redução, 19 de redução/redução
Estado 153 conflitos: 1 de redução/redução
Estado 165 conflitos: 1 de deslocamento/redução
Estado 191 conflitos: 2 de deslocamento/redução, 21 de redução/redução
Estado 217 conflitos: 1 de deslocamento/redução, 23 de redução/redução
Estado 219 conflitos: 1 de deslocamento/redução
Estado 235 conflitos: 19 de deslocamento/redução
Estado 237 conflitos: 2 de deslocamento/redução, 45 de redução/redução
Estado 248 conflitos: 1 de deslocamento/redução, 20 de redução/redução
Estado 255 conflitos: 2 de deslocamento/redução, 21 de redução/redução
Estado 257 conflitos: 19 de deslocamento/redução
Estado 258 conflitos: 1 de deslocamento/redução, 45 de redução/redução
Estado 298 conflitos: 1 de deslocamento/redução


Gramática

    0 $accept: translation_unit $end

    1 translation_unit: global_statement_list alchemia_statement

    2 global_statement_list: ε
    3                      | global_statement_list global_statement

    4 global_statement: import_statement
    5                 | declaration_statement
    6                 | function_declaration_statement
    7                 | type_define_statement

    8 $@1: ε

    9 block: LBRACE $@1 statement_list RBRACE

   10 alchemia_statement: IDENTIFIER LPAREN RPAREN KW_MAIN block

   11 statement_list: ε
   12               | statement_list statement

   13 statement: expression_statement
   14          | iteration_statement
   15          | io_functions
   16          | declaration_statement
   17          | function_call_statement
   18          | conditional_statement
   19          | type_define_statement
   20          | vector_statement
   21          | jump_statement
   22          | causal_statement
   23          | enum_assignment
   24          | assignment_statement

   25 assignment_statement: expression OP_ASSIGN IDENTIFIER SEMICOLON
   26                     | expression OP_ASSIGN IDENTIFIER LANGLE expression RANGLE SEMICOLON

   27 import_statement: IDENTIFIER KW_EVOCARE SEMICOLON

   28 expression_statement: expression SEMICOLON

   29 primary_expression: IDENTIFIER
   30                   | vector_access
   31                   | member_access_direct
   32                   | pointer_statement
   33                   | constant
   34                   | string
   35                   | LPAREN expression RPAREN

   36 unary_expression: primary_expression
   37                 | OP_LOGICAL_NOT unary_expression
   38                 | OP_DEREF_POINTER unary_expression
   39                 | OP_ADDR_OF unary_expression
   40                 | OP_SUBTRACT unary_expression

   41 expression: unary_expression
   42           | expression OP_ASSIGN assing_value
   43           | expression OP_ACCESS_POINTER assing_value
   44           | expression OP_ACCESS_MEMBER assing_value
   45           | expression OP_LOGICAL_XOR unary_expression
   46           | expression OP_LOGICAL_OR unary_expression
   47           | expression OP_LOGICAL_AND unary_expression
   48           | expression OP_EQUAL unary_expression
   49           | expression OP_NOT_EQUAL unary_expression
   50           | expression OP_LESS_THAN unary_expression
   51           | expression OP_GREATER_THAN unary_expression
   52           | expression OP_LESS_EQUAL unary_expression
   53           | expression OP_GREATER_EQUAL unary_expression
   54           | expression OP_ADD unary_expression
   55           | expression OP_SUBTRACT unary_expression
   56           | expression OP_MULTIPLY unary_expression
   57           | expression OP_DIVIDE unary_expression
   58           | expression OP_MODULUS unary_expression
   59           | expression OP_EXP unary_expression
   60           | expression OP_INTEGER_DIVIDE unary_expression

   61 constant: LIT_INT
   62         | LIT_FLOAT
   63         | LIT_FACTUM
   64         | LIT_FICTUM
   65         | LIT_CHAR

   66 string: LIT_STRING

   67 assing_value: IDENTIFIER
   68             | vector_access
   69             | pointer_statement

   70 declaration_statement: IDENTIFIER type_specifier opcional_constant SEMICOLON
   71                      | expression OP_ASSIGN IDENTIFIER type_specifier opcional_constant SEMICOLON
   72                      | pointer_declaration

   73 opcional_constant: KW_MOL
   74                  | ε

   75 list_declaration_statement: ε
   76                           | declaration_statement list_declaration_statement
   77                           | declaration_statement

   78 type_specifier: TYPE_ATOMUS
   79               | TYPE_FRACTIO
   80               | TYPE_FRAGMENTUM
   81               | TYPE_MAGNUS
   82               | TYPE_MINIMUS
   83               | TYPE_QUANTUM
   84               | TYPE_SCRIPTUM
   85               | TYPE_SYMBOLUM
   86               | TYPE_VACUUM
   87               | IDENTIFIER
   88               | IDENTIFIER KW_ENUMERARE
   89               | OP_DEREF_POINTER type_specifier

   90 $@2: ε

   91 function_declaration_statement: KW_FORMULA LPAREN parameter_list RPAREN IDENTIFIER OP_ASSIGN type_specifier $@2 LBRACE statement_list RBRACE

   92 parameter_list: ε
   93               | parameter
   94               | parameter_list PIPE parameter

   95 parameter: IDENTIFIER type_specifier

   96 function_call_statement: LPAREN argument_list RPAREN IDENTIFIER SEMICOLON

   97 argument_list: expression
   98              | argument_list PIPE expression

   99 jump_statement: KW_CONTINUUM SEMICOLON
  100               | KW_RUPTIO SEMICOLON
  101               | KW_REDIRE SEMICOLON
  102               | expression KW_REDIRE SEMICOLON

  103 conditional_statement: LPAREN expression RPAREN KW_SI block

  104 $@3: ε

  105 conditional_statement: LPAREN expression RPAREN KW_SI block $@3 conditional_non_statement

  106 $@4: ε

  107 conditional_statement: LPAREN expression RPAREN KW_VERTERE LBRACE $@4 causal_statement RBRACE

  108 conditional_non_statement: KW_NON block
  109                          | KW_NON conditional_statement

  110 causal_statement: KW_CASUS expression COLON statement_list
  111                 | KW_AXIOM COLON statement_list

  112 iteration_statement: LPAREN expression RPAREN KW_PERSISTO block
  113                    | LPAREN expression_statement expression_statement RPAREN KW_ITERARE block
  114                    | LPAREN expression_statement expression_statement expression RPAREN KW_ITERARE block
  115                    | LPAREN declaration_statement expression_statement RPAREN KW_ITERARE block
  116                    | LPAREN declaration_statement expression_statement expression RPAREN KW_ITERARE block

  117 io_functions: function_input_output
  118             | function_magnitudo

  119 function_input_output: identifier_langle_list
  120                      | identifier_rangle_list

  121 identifier_langle_list: IDENTIFIER LANGLE KW_LECTURA SEMICOLON
  122                       | IDENTIFIER LANGLE identifier_langle_list

  123 identifier_rangle_list: IDENTIFIER RANGLE KW_REVELARE SEMICOLON
  124                       | IDENTIFIER RANGLE identifier_rangle_list

  125 function_magnitudo: LPAREN type_expression RPAREN KW_MAGNITUDO SEMICOLON

  126 type_expression: type_specifier

  127 type_define_statement: KW_DESIGNARE type_specifier IDENTIFIER SEMICOLON
  128                      | type_define_struct
  129                      | type_define_enum

  130 $@5: ε

  131 type_define_struct: KW_DESIGNARE IDENTIFIER LBRACE $@5 list_declaration_statement RBRACE KW_HOMUNCULUS SEMICOLON

  132 type_define_enum: IDENTIFIER LBRACE enum_list RBRACE KW_ENUMERARE SEMICOLON

  133 enum_assignment: IDENTIFIER OP_ASSIGN IDENTIFIER IDENTIFIER KW_ENUMERARE SEMICOLON

  134 enum_list: IDENTIFIER
  135          | IDENTIFIER OP_ASSIGN LIT_INT
  136          | IDENTIFIER OP_ASSIGN LIT_CHAR
  137          | enum_list PIPE IDENTIFIER
  138          | enum_list PIPE IDENTIFIER OP_ASSIGN LIT_INT
  139          | enum_list PIPE IDENTIFIER OP_ASSIGN LIT_CHAR

  140 vector_statement: IDENTIFIER type_specifier LANGLE expression RANGLE SEMICOLON
  141                 | LBRACKET argument_list RBRACKET OP_ASSIGN IDENTIFIER SEMICOLON

  142 vector_access: IDENTIFIER LANGLE expression RANGLE

  143 pointer_statement: pointer_assignment
  144                  | pointer_dereference
  145                  | member_access_direct
  146                  | member_access_dereference
  147                  | member_access_pointer

  148 pointer_declaration: IDENTIFIER OP_DEREF_POINTER type_specifier SEMICOLON
  149                    | expression OP_ASSIGN IDENTIFIER OP_DEREF_POINTER type_specifier SEMICOLON

  150 pointer_assignment: IDENTIFIER OP_ADDR_OF

  151 pointer_dereference: OP_DEREF_POINTER IDENTIFIER

  152 access_list: IDENTIFIER

  153 member_access_direct: access_list

  154 member_access_dereference: LPAREN OP_DEREF_POINTER IDENTIFIER RPAREN OP_ACCESS_MEMBER access_list

  155 member_access_pointer: IDENTIFIER OP_ACCESS_POINTER access_list


Terminais, com as regras onde eles aparecem

    $end (0) 0
    error (256)
    KW_MAIN (258) 10
    KW_CASUS (259) 110
    KW_AXIOM (260) 111
    KW_CONTINUUM (261) 99
    KW_RUPTIO (262) 100
    KW_VERTERE (263) 107
    KW_DESIGNARE (264) 127 131
    KW_ENUMERARE (265) 88 132 133
    KW_EVOCARE (266) 27
    KW_FORMULA (267) 91
    KW_HOMUNCULUS (268) 131
    KW_ITERARE (269) 113 114 115 116
    KW_LECTURA (270) 121
    KW_MAGNITUDO (271) 125
    KW_MOL (272) 73
    KW_NON_SI (273)
    KW_NON (274) 108 109
    KW_PERSISTO (275) 112
    KW_REDIRE (276) 101 102
    KW_REVELARE (277) 123
    KW_SI (278) 103 105
    TYPE_ATOMUS (279) 78
    TYPE_FRACTIO (280) 79
    TYPE_FRAGMENTUM (281) 80
    TYPE_MAGNUS (282) 81
    TYPE_MINIMUS (283) 82
    TYPE_QUANTUM (284) 83
    TYPE_SCRIPTUM (285) 84
    TYPE_SYMBOLUM (286) 85
    TYPE_VACUUM (287) 86
    LIT_FACTUM (288) 63
    LIT_FICTUM (289) 64
    LIT_FLOAT <val_float> (290) 62
    LIT_INT <val_int> (291) 61 135 138
    LIT_CHAR <str> (292) 65 136 139
    LIT_STRING <str> (293) 66
    OP_ACCESS_POINTER (294) 43 155
    OP_ASSIGN (295) 25 26 42 71 91 133 135 136 138 139 141 149
    OP_GREATER_EQUAL (296) 53
    OP_LESS_EQUAL (297) 52
    OP_EQUAL (298) 48
    OP_NOT_EQUAL (299) 49
    OP_INTEGER_DIVIDE (300) 60
    OP_EXP (301) 59
    OP_LOGICAL_AND (302) 47
    OP_LOGICAL_OR (303) 46
    OP_MULTIPLY (304) 56
    OP_ADD (305) 54
    OP_SUBTRACT (306) 40 55
    OP_DIVIDE (307) 57
    OP_MODULUS (308) 58
    OP_ACCESS_MEMBER (309) 44 154
    OP_LOGICAL_NOT (310) 37
    OP_GREATER_THAN (311) 51
    OP_LESS_THAN (312) 50
    OP_LOGICAL_XOR (313) 45
    OP_ADDR_OF (314) 39 150
    OP_DEREF_POINTER (315) 38 89 148 149 151 154
    LANGLE (316) 26 121 122 140 142
    RANGLE (317) 26 123 124 140 142
    COLON (318) 110 111
    LPAREN (319) 10 35 91 96 103 105 107 112 113 114 115 116 125 154
    RPAREN (320) 10 35 91 96 103 105 107 112 113 114 115 116 125 154
    LBRACKET (321) 141
    RBRACKET (322) 141
    LBRACE (323) 9 91 107 131 132
    RBRACE (324) 9 91 107 131 132
    PIPE (325) 94 98 137 138 139
    SEMICOLON (326) 25 26 27 28 70 71 96 99 100 101 102 121 123 125 127 131 132 133 140 141 148 149
    IDENTIFIER <str> (327) 10 25 26 27 29 67 70 71 87 88 91 95 96 121 122 123 124 127 131 132 133 134 135 136 137 138 139 140 141 142 148 149 150 151 152 154 155
    LEX_ERROR (328)


Não terminais com as regras onde eles aparecem

    $accept (74)
        à esquerda: 0
    translation_unit (75)
        à esquerda: 1
        à direita: 0
    global_statement_list (76)
        à esquerda: 2 3
        à direita: 1 3
    global_statement (77)
        à esquerda: 4 5 6 7
        à direita: 3
    block (78)
        à esquerda: 9
        à direita: 10 103 105 108 112 113 114 115 116
    $@1 (79)
        à esquerda: 8
        à direita: 9
    alchemia_statement (80)
        à esquerda: 10
        à direita: 1
    statement_list (81)
        à esquerda: 11 12
        à direita: 9 12 91 110 111
    statement (82)
        à esquerda: 13 14 15 16 17 18 19 20 21 22 23 24
        à direita: 12
    assignment_statement (83)
        à esquerda: 25 26
        à direita: 24
    import_statement (84)
        à esquerda: 27
        à direita: 4
    expression_statement (85)
        à esquerda: 28
        à direita: 13 113 114 115 116
    primary_expression <ptr> (86)
        à esquerda: 29 30 31 32 33 34 35
        à direita: 36
    unary_expression <ptr> (87)
        à esquerda: 36 37 38 39 40
        à direita: 37 38 39 40 41 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60
    expression <ptr> (88)
        à esquerda: 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60
        à direita: 25 26 28 35 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 71 97 98 102 103 105 107 110 112 114 116 140 142 149
    constant <ptr> (89)
        à esquerda: 61 62 63 64 65
        à direita: 33
    string <ptr> (90)
        à esquerda: 66
        à direita: 34
    assing_value (91)
        à esquerda: 67 68 69
        à direita: 42 43 44
    declaration_statement (92)
        à esquerda: 70 71 72
        à direita: 5 16 76 77 115 116
    opcional_constant (93)
        à esquerda: 73 74
        à direita: 70 71
    list_declaration_statement (94)
        à esquerda: 75 76 77
        à direita: 76 131
    type_specifier <str> (95)
        à esquerda: 78 79 80 81 82 83 84 85 86 87 88 89
        à direita: 70 71 89 91 95 126 127 140 148 149
    function_declaration_statement (96)
        à esquerda: 91
        à direita: 6
    $@2 (97)
        à esquerda: 90
        à direita: 91
    parameter_list (98)
        à esquerda: 92 93 94
        à direita: 91 94
    parameter (99)
        à esquerda: 95
        à direita: 93 94
    function_call_statement (100)
        à esquerda: 96
        à direita: 17
    argument_list <arg_list> (101)
        à esquerda: 97 98
        à direita: 96 98 141
    jump_statement (102)
        à esquerda: 99 100 101 102
        à direita: 21
    conditional_statement (103)
        à esquerda: 103 105 107
        à direita: 18 109
    $@3 (104)
        à esquerda: 104
        à direita: 105
    $@4 (105)
        à esquerda: 106
        à direita: 107
    conditional_non_statement (106)
        à esquerda: 108 109
        à direita: 105
    causal_statement (107)
        à esquerda: 110 111
        à direita: 22 107
    iteration_statement (108)
        à esquerda: 112 113 114 115 116
        à direita: 14
    io_functions (109)
        à esquerda: 117 118
        à direita: 15
    function_input_output (110)
        à esquerda: 119 120
        à direita: 117
    identifier_langle_list (111)
        à esquerda: 121 122
        à direita: 119 122
    identifier_rangle_list (112)
        à esquerda: 123 124
        à direita: 120 124
    function_magnitudo (113)
        à esquerda: 125
        à direita: 118
    type_expression (114)
        à esquerda: 126
        à direita: 125
    type_define_statement (115)
        à esquerda: 127 128 129
        à direita: 7 19
    type_define_struct (116)
        à esquerda: 131
        à direita: 128
    $@5 (117)
        à esquerda: 130
        à direita: 131
    type_define_enum (118)
        à esquerda: 132
        à direita: 129
    enum_assignment (119)
        à esquerda: 133
        à direita: 23
    enum_list (120)
        à esquerda: 134 135 136 137 138 139
        à direita: 132 137 138 139
    vector_statement (121)
        à esquerda: 140 141
        à direita: 20
    vector_access <ptr> (122)
        à esquerda: 142
        à direita: 30 68
    pointer_statement <ptr> (123)
        à esquerda: 143 144 145 146 147
        à direita: 32 69
    pointer_declaration (124)
        à esquerda: 148 149
        à direita: 72
    pointer_assignment <ptr> (125)
        à esquerda: 150
        à direita: 143
    pointer_dereference <ptr> (126)
        à esquerda: 151
        à direita: 144
    access_list <ptr> (127)
        à esquerda: 152
        à direita: 153 154 155
    member_access_direct <ptr> (128)
        à esquerda: 153
        à direita: 31 145
    member_access_dereference <ptr> (129)
        à esquerda: 154
        à direita: 146
    member_access_pointer <ptr> (130)
        à esquerda: 155
        à direita: 147


Estado 0

    0 $accept: • translation_unit $end

    $padrão  reduzir usando a regra 2 (global_statement_list)

    translation_unit       ir ao estado 1
    global_statement_list  ir ao estado 2


Estado 1

    0 $accept: translation_unit • $end

    $end  deslocar, e ir ao estado 3


Estado 2

    1 translation_unit: global_statement_list • alchemia_statement
    3 global_statement_list: global_statement_list • global_statement

    KW_DESIGNARE      deslocar, e ir ao estado 4
    KW_FORMULA        deslocar, e ir ao estado 5
    LIT_FACTUM        deslocar, e ir ao estado 6
    LIT_FICTUM        deslocar, e ir ao estado 7
    LIT_FLOAT         deslocar, e ir ao estado 8
    LIT_INT           deslocar, e ir ao estado 9
    LIT_CHAR          deslocar, e ir ao estado 10
    LIT_STRING        deslocar, e ir ao estado 11
    OP_SUBTRACT       deslocar, e ir ao estado 12
    OP_LOGICAL_NOT    deslocar, e ir ao estado 13
    OP_ADDR_OF        deslocar, e ir ao estado 14
    OP_DEREF_POINTER  deslocar, e ir ao estado 15
    LPAREN            deslocar, e ir ao estado 16
    IDENTIFIER        deslocar, e ir ao estado 17

    global_statement                ir ao estado 18
    alchemia_statement              ir ao estado 19
    import_statement                ir ao estado 20
    primary_expression              ir ao estado 21
    unary_expression                ir ao estado 22
    expression                      ir ao estado 23
    constant                        ir ao estado 24
    string                          ir ao estado 25
    declaration_statement           ir ao estado 26
    function_declaration_statement  ir ao estado 27
    type_define_statement           ir ao estado 28
    type_define_struct              ir ao estado 29
    type_define_enum                ir ao estado 30
    vector_access                   ir ao estado 31
    pointer_statement               ir ao estado 32
    pointer_declaration             ir ao estado 33
    pointer_assignment              ir ao estado 34
    pointer_dereference             ir ao estado 35
    access_list                     ir ao estado 36
    member_access_direct            ir ao estado 37
    member_access_dereference       ir ao estado 38
    member_access_pointer           ir ao estado 39


Estado 3

    0 $accept: translation_unit $end •

    $padrão  aceitar


Estado 4

  127 type_define_statement: KW_DESIGNARE • type_specifier IDENTIFIER SEMICOLON
  131 type_define_struct: KW_DESIGNARE • IDENTIFIER LBRACE $@5 list_declaration_statement RBRACE KW_HOMUNCULUS SEMICOLON

    TYPE_ATOMUS       deslocar, e ir ao estado 40
    TYPE_FRACTIO      deslocar, e ir ao estado 41
    TYPE_FRAGMENTUM   deslocar, e ir ao estado 42
    TYPE_MAGNUS       deslocar, e ir ao estado 43
    TYPE_MINIMUS      deslocar, e ir ao estado 44
    TYPE_QUANTUM      deslocar, e ir ao estado 45
    TYPE_SCRIPTUM     deslocar, e ir ao estado 46
    TYPE_SYMBOLUM     deslocar, e ir ao estado 47
    TYPE_VACUUM       deslocar, e ir ao estado 48
    OP_DEREF_POINTER  deslocar, e ir ao estado 49
    IDENTIFIER        deslocar, e ir ao estado 50

    type_specifier  ir ao estado 51


Estado 5

   91 function_declaration_statement: KW_FORMULA • LPAREN parameter_list RPAREN IDENTIFIER OP_ASSIGN type_specifier $@2 LBRACE statement_list RBRACE

    LPAREN  deslocar, e ir ao estado 52


Estado 6

   63 constant: LIT_FACTUM •

    $padrão  reduzir usando a regra 63 (constant)


Estado 7

   64 constant: LIT_FICTUM •

    $padrão  reduzir usando a regra 64 (constant)


Estado 8

   62 constant: LIT_FLOAT •

    $padrão  reduzir usando a regra 62 (constant)


Estado 9

   61 constant: LIT_INT •

    $padrão  reduzir usando a regra 61 (constant)


Estado 10

   65 constant: LIT_CHAR •

    $padrão  reduzir usando a regra 65 (constant)


Estado 11

   66 string: LIT_STRING •

    $padrão  reduzir usando a regra 66 (string)


Estado 12

   40 unary_expression: OP_SUBTRACT • unary_expression

    LIT_FACTUM        deslocar, e ir ao estado 6
    LIT_FICTUM        deslocar, e ir ao estado 7
    LIT_FLOAT         deslocar, e ir ao estado 8
    LIT_INT           deslocar, e ir ao estado 9
    LIT_CHAR          deslocar, e ir ao estado 10
    LIT_STRING        deslocar, e ir ao estado 11
    OP_SUBTRACT       deslocar, e ir ao estado 12
    OP_LOGICAL_NOT    deslocar, e ir ao estado 13
    OP_ADDR_OF        deslocar, e ir ao estado 14
    OP_DEREF_POINTER  deslocar, e ir ao estado 15
    LPAREN            deslocar, e ir ao estado 16
    IDENTIFIER        deslocar, e ir ao estado 53

    primary_expression         ir ao estado 21
    unary_expression           ir ao estado 54
    constant                   ir ao estado 24
    string                     ir ao estado 25
    vector_access              ir ao estado 31
    pointer_statement          ir ao estado 32
    pointer_assignment         ir ao estado 34
    pointer_dereference        ir ao estado 35
    access_list                ir ao estado 36
    member_access_direct       ir ao estado 37
    member_access_dereference  ir ao estado 38
    member_access_pointer      ir ao estado 39


Estado 13

   37 unary_expression: OP_LOGICAL_NOT • unary_expression

    LIT_FACTUM        deslocar, e ir ao estado 6
    LIT_FICTUM        deslocar, e ir ao estado 7
    LIT_FLOAT         deslocar, e ir ao estado 8
    LIT_INT           deslocar, e ir ao estado 9
    LIT_CHAR          deslocar, e ir ao estado 10
    LIT_STRING        deslocar, e ir ao estado 11
    OP_SUBTRACT       deslocar, e ir ao estado 12
    OP_LOGICAL_NOT    deslocar, e ir ao estado 13
    OP_ADDR_OF        deslocar, e ir ao estado 14
    OP_DEREF_POINTER  deslocar, e ir ao estado 15
    LPAREN            deslocar, e ir ao estado 16
    IDENTIFIER        deslocar, e ir ao estado 53

    primary_expression         ir ao estado 21
    unary_expression           ir ao estado 55
    constant                   ir ao estado 24
    string                     ir ao estado 25
    vector_access              ir ao estado 31
    pointer_statement          ir ao estado 32
    pointer_assignment         ir ao estado 34
    pointer_dereference        ir ao estado 35
    access_list                ir ao estado 36
    member_access_direct       ir ao estado 37
    member_access_dereference  ir ao estado 38
    member_access_pointer      ir ao estado 39


Estado 14

   39 unary_expression: OP_ADDR_OF • unary_expression

    LIT_FACTUM        deslocar, e ir ao estado 6
    LIT_FICTUM        deslocar, e ir ao estado 7
    LIT_FLOAT         deslocar, e ir ao estado 8
    LIT_INT           deslocar, e ir ao estado 9
    LIT_CHAR          deslocar, e ir ao estado 10
    LIT_STRING        deslocar, e ir ao estado 11
    OP_SUBTRACT       deslocar, e ir ao estado 12
    OP_LOGICAL_NOT    deslocar, e ir ao estado 13
    OP_ADDR_OF        deslocar, e ir ao estado 14
    OP_DEREF_POINTER  deslocar, e ir ao estado 15
    LPAREN            deslocar, e ir ao estado 16
    IDENTIFIER        deslocar, e ir ao estado 53

    primary_expression         ir ao estado 21
    unary_expression           ir ao estado 56
    constant                   ir ao estado 24
    string                     ir ao estado 25
    vector_access              ir ao estado 31
    pointer_statement          ir ao estado 32
    pointer_assignment         ir ao estado 34
    pointer_dereference        ir ao estado 35
    access_list                ir ao estado 36
    member_access_direct       ir ao estado 37
    member_access_dereference  ir ao estado 38
    member_access_pointer      ir ao estado 39


Estado 15

   38 unary_expression: OP_DEREF_POINTER • unary_expression
  151 pointer_dereference: OP_DEREF_POINTER • IDENTIFIER

    LIT_FACTUM        deslocar, e ir ao estado 6
    LIT_FICTUM        deslocar, e ir ao estado 7
    LIT_FLOAT         deslocar, e ir ao estado 8
    LIT_INT           deslocar, e ir ao estado 9
    LIT_CHAR          deslocar, e ir ao estado 10
    LIT_STRING        deslocar, e ir ao estado 11
    OP_SUBTRACT       deslocar, e ir ao estado 12
    OP_LOGICAL_NOT    deslocar, e ir ao estado 13
    OP_ADDR_OF        deslocar, e ir ao estado 14
    OP_DEREF_POINTER  deslocar, e ir ao estado 15
    LPAREN            deslocar, e ir ao estado 16
    IDENTIFIER        deslocar, e ir ao estado 57

    primary_expression         ir ao estado 21
    unary_expression           ir ao estado 58
    constant                   ir ao estado 24
    string                     ir ao estado 25
    vector_access              ir ao estado 31
    pointer_statement          ir ao estado 32
    pointer_assignment         ir ao estado 34
    pointer_dereference        ir ao estado 35
    access_list                ir ao estado 36
    member_access_direct       ir ao estado 37
    member_access_dereference  ir ao estado 38
    member_access_pointer      ir ao estado 39


Estado 16

   35 primary_expression: LPAREN • expression RPAREN
  154 member_access_dereference: LPAREN • OP_DEREF_POINTER IDENTIFIER RPAREN OP_ACCESS_MEMBER access_list

    LIT_FACTUM        deslocar, e ir ao estado 6
    LIT_FICTUM        deslocar, e ir ao estado 7
    LIT_FLOAT         deslocar, e ir ao estado 8
    LIT_INT           deslocar, e ir ao estado 9
    LIT_CHAR          deslocar, e ir ao estado 10
    LIT_STRING        deslocar, e ir ao estado 11
    OP_SUBTRACT       deslocar, e ir ao estado 12
    OP_LOGICAL_NOT    deslocar, e ir ao estado 13
    OP_ADDR_OF        deslocar, e ir ao estado 14
    OP_DEREF_POINTER  deslocar, e ir ao estado 59
    LPAREN            deslocar, e ir ao estado 16
    IDENTIFIER        deslocar, e ir ao estado 53

    primary_expression         ir ao estado 21
    unary_expression           ir ao estado 22
    expression                 ir ao estado 60
    constant                   ir ao estado 24
    string                     ir ao estado 25
    vector_access              ir ao estado 31
    pointer_statement          ir ao estado 32
    pointer_assignment         ir ao estado 34
    pointer_dereference        ir ao estado 35
    access_list                ir ao estado 36
    member_access_direct       ir ao estado 37
    member_access_dereference  ir ao estado 38
    member_access_pointer      ir ao estado 39


Estado 17

   10 alchemia_statement: IDENTIFIER • LPAREN RPAREN KW_MAIN block
   27 import_statement: IDENTIFIER • KW_EVOCARE SEMICOLON
   29 primary_expression: IDENTIFIER •
   70 declaration_statement: IDENTIFIER • type_specifier opcional_constant SEMICOLON
  132 type_define_enum: IDENTIFIER • LBRACE enum_list RBRACE KW_ENUMERARE SEMICOLON
  142 vector_access: IDENTIFIER • LANGLE expression RANGLE
  148 pointer_declaration: IDENTIFIER • OP_DEREF_POINTER type_specifier SEMICOLON
  150 pointer_assignment: IDENTIFIER • OP_ADDR_OF
  152 access_list: IDENTIFIER •
  155 member_access_pointer: IDENTIFIER • OP_ACCESS_POINTER access_list

    KW_EVOCARE         deslocar, e ir ao estado 61
    TYPE_ATOMUS        deslocar, e ir ao estado 40
    TYPE_FRACTIO       deslocar, e ir ao estado 41
    TYPE_FRAGMENTUM    deslocar, e ir ao estado 42
    TYPE_MAGNUS        deslocar, e ir ao estado 43
    TYPE_MINIMUS       deslocar, e ir ao estado 44
    TYPE_QUANTUM       deslocar, e ir ao estado 45
    TYPE_SCRIPTUM      deslocar, e ir ao estado 46
    TYPE_SYMBOLUM      deslocar, e ir ao estado 47
    TYPE_VACUUM        deslocar, e ir ao estado 48
    OP_ACCESS_POINTER  deslocar, e ir ao estado 62
    OP_ADDR_OF         deslocar, e ir ao estado 63
    OP_DEREF_POINTER   deslocar, e ir ao estado 64
    LANGLE             deslocar, e ir ao estado 65
    LPAREN             deslocar, e ir ao estado 66
    LBRACE             deslocar, e ir ao estado 67
    IDENTIFIER         deslocar, e ir ao estado 68

    OP_ACCESS_POINTER  [reduzir usando a regra 29 (primary_expression)]
    OP_ACCESS_POINTER  [reduzir usando a regra 152 (access_list)]
    OP_ASSIGN          reduzir usando a regra 29 (primary_expression)
    OP_ASSIGN          [reduzir usando a regra 152 (access_list)]
    OP_GREATER_EQUAL   reduzir usando a regra 29 (primary_expression)
    OP_GREATER_EQUAL   [reduzir usando a regra 152 (access_list)]
    OP_LESS_EQUAL      reduzir usando a regra 29 (primary_expression)
    OP_LESS_EQUAL      [reduzir usando a regra 152 (access_list)]
    OP_EQUAL           reduzir usando a regra 29 (primary_expression)
    OP_EQUAL           [reduzir usando a regra 152 (access_list)]
    OP_NOT_EQUAL       reduzir usando a regra 29 (primary_expression)
    OP_NOT_EQUAL       [reduzir usando a regra 152 (access_list)]
    OP_INTEGER_DIVIDE  reduzir usando a regra 29 (primary_expression)
    OP_INTEGER_DIVIDE  [reduzir usando a regra 152 (access_list)]
    OP_EXP             reduzir usando a regra 29 (primary_expression)
    OP_EXP             [reduzir usando a regra 152 (access_list)]
    OP_LOGICAL_AND     reduzir usando a regra 29 (primary_expression)
    OP_LOGICAL_AND     [reduzir usando a regra 152 (access_list)]
    OP_LOGICAL_OR      reduzir usando a regra 29 (primary_expression)
    OP_LOGICAL_OR      [reduzir usando a regra 152 (access_list)]
    OP_MULTIPLY        reduzir usando a regra 29 (primary_expression)
    OP_MULTIPLY        [reduzir usando a regra 152 (access_list)]
    OP_ADD             reduzir usando a regra 29 (primary_expression)
    OP_ADD             [reduzir usando a regra 152 (access_list)]
    OP_SUBTRACT        reduzir usando a regra 29 (primary_expression)
    OP_SUBTRACT        [reduzir usando a regra 152 (access_list)]
    OP_DIVIDE          reduzir usando a regra 29 (primary_expression)
    OP_DIVIDE          [reduzir usando a regra 152 (access_list)]
    OP_MODULUS         reduzir usando a regra 29 (primary_expression)
    OP_MODULUS         [reduzir usando a regra 152 (access_list)]
    OP_ACCESS_MEMBER   reduzir usando a regra 29 (primary_expression)
    OP_ACCESS_MEMBER   [reduzir usando a regra 152 (access_list)]
    OP_GREATER_THAN    reduzir usando a regra 29 (primary_expression)
    OP_GREATER_THAN    [reduzir usando a regra 152 (access_list)]
    OP_LESS_THAN       reduzir usando a regra 29 (primary_expression)
    OP_LESS_THAN       [reduzir usando a regra 152 (access_list)]
    OP_LOGICAL_XOR     reduzir usando a regra 29 (primary_expression)
    OP_LOGICAL_XOR     [reduzir usando a regra 152 (access_list)]
    $padrão            reduzir usando a regra 29 (primary_expression)

    type_specifier  ir ao estado 69


Estado 18

    3 global_statement_list: global_statement_list global_statement •

    $padrão  reduzir usando a regra 3 (global_statement_list)


Estado 19

    1 translation_unit: global_statement_list alchemia_statement •

    $padrão  reduzir usando a regra 1 (translation_unit)


Estado 20

    4 global_statement: import_statement •
